Anpassungen am Template, Versand als HTML/Plain

--- a/Resources/Private/Layouts/Email.html
+++ b/Resources/Private/Layouts/Email.html
@@ -1,33 +1,29 @@
 <f:render section="main"/>
-<footer>
-    <p>--</p>
+--
+Bitte beachten Sie auch folgende wichtige Informationen:
 
-    <p>Bitte beachten Sie auch folgende wichtige Informationen:</p>
+https://www.lentpark.net/fileadmin/media/download/Information%20Schul-%20u%20%20Wandertage.pdf
 
-    <p>https://downloads.lentpark.net/Information-Schulausfluege-Wandertage.pdf</p>
+https://www.koelnbaeder.de/AGB.pdf
 
-    <p>https://downloads.lentpark.net/AGB-Koelnbaeder.pdf</p>
+--
 
-    <p>--</p>
+Mit freundlichen Grüßen
 
-    <p>Mit freundlichen Grüßen</p>
+Ihr Lentpark Team
 
-    <p>Ihr Lentpark Team<br/>
+KölnBäder GmbH
 
-    <p>KölnBäder GmbH</p>
+Tel.: +49 (0)221-279180-13
+Fax: +49 (0)221-279180-79
 
-    <p>Tel.: +49 (0)221-279180-13<br/>
-        Fax: +49 (0)221-279180-79</p>
+E-Mail: info@lentpark.net
+Internet: www.lentpark.net
 
-    <p>E-Mail: info@lentpark.net<br/>
-        Internet: www.lentpark.net</p>
+KölnBäder GmbH | Kämmergasse 1 | 50676 Köln
 
-    <p>KölnBäder GmbH | Kämmergasse 1 | 50676 Köln</p>
+www.koelnbaeder.de | Info-Telefon: +49 (0)221-280 380
 
-    <p>www.koelnbaeder.de | Info-Telefon: +49 (0)221-280 380</p>
-
-    <p>Handelsregister: Amtsgericht Köln, HRB 29 611<br/>
-        Geschäftsführung: Berthold Schmitt, Gerhard Reinke<br/>
-        Vorsitzender des Aufsichtsrates: Peter Kron</p>
-
-</footer>
+Handelsregister: Amtsgericht Köln, HRB 29 611
+Geschäftsführung: Berthold Schmitt, Gerhard Reinke
+Vorsitzender des Aufsichtsrates: Peter Kron
