--- a/Resources/Private/Templates/Email/Confirm.html
+++ b/Resources/Private/Templates/Email/Confirm.html
@@ -1,16 +1,16 @@
 <f:layout name="Email"/>
 
 <f:section name="main">
-    <p>Hallo {booking.user.name},</p>
 
-    <p>Your booking is Confirmed</p>
+Sehr geehrte(r) {booking.user.name},
+Ihre Buchung ist bestätigt.
 
-    <p>{booking.startAt ->
-        f:format.date(format: 'd.m.Y')}
-        <br/>
-        {booking.startAt ->
-        f:format.date(format: 'H:i')} - {booking.endAt -> f:format.date(format: 'H:i')}
-    </p>
+Ihre Buchungsdetails:
 
-    <p>{booking.quantity} Persons</p>
+
+Datum: {booking.startAt -> f:format.date(format: 'd.m.Y')}
+Uhrzeit: {booking.startAt -> f:format.date(format: 'H:i')} - {booking.endAt -> f:format.date(format: 'H:i')}
+Personen: {booking.quantity}
+Klasse: {booking.classification}
+
 </f:section>
