--- a/Resources/Private/Templates/Email/Create.html
+++ b/Resources/Private/Templates/Email/Create.html
@@ -1,19 +1,16 @@
 <f:layout name="Email"/>
 
 <f:section name="main">
+Sehr geehrte(r) {booking.user.name},
+Wir danken für Ihre Buchungsanfrage am Eislaufkalender des Lentparks Köln.
 
-    <p>Sehr geehrte(r) {booking.user.name},<br/>
-        Wir danken für Ihre Buchungsanfrage am Eislaufkalender des Lentparks Köln.</p>
+In Kürze werden wir Ihre Anfrage beantworten, bis dahin ist Ihre Buchung mit dem Status reserviert in unserem System hinterlegt.
 
-    <p>In Kürze werden wir Ihre Anfrage beantworten, bis dahin ist Ihre Buchung mit dem Status reserviert, in unserem
-        System hinterlegt.</p>
+Ihre Buchungsdetails:
 
-    <p>Ihre Buchungsdetails</p>
-
-    <p>Datum: booking.startAt -> f:format.date(format: 'd.m.Y')}</br>
-        Uhrzeit: {booking.startAt ->
-        f:format.date(format: 'H:i')} - {booking.endAt -> f:format.date(format: 'H:i')}<br/>
-        Personen: {booking.quantity}<br/>
-        Klasse: {booking.classification}</p>
+Datum: {booking.startAt -> f:format.date(format: 'd.m.Y')}
+Uhrzeit: {booking.startAt -> f:format.date(format: 'H:i')} - {booking.endAt -> f:format.date(format: 'H:i')}
+Personen: {booking.quantity}
+Klasse: {booking.classification}
 
 </f:section>
